@@ -20,6 +20,7 @@
 			<input id='q-hdr' name="q" value="{if $results}{$results.phrase|escape}{else}{$q|escape}{/if}" class="field search">
 			<input name="sort" value="{$sort|escape}" type="hidden">
 			<input name="order" value="{$order|escape}" type="hidden">
+			<a href="index.php" title="<#Clear Search#>" alt="<#Clear Search#>"><img id="ps-search-clear" src="{theme->url}/img/icons/turd.gif"></a>
 		</span>
 		<h1><#Overall Team Records#>{if $conf.main.site_name} for {$conf.main.site_name}{/if}</h1>
 		<h2>
