@@ -51,6 +51,9 @@
 #ps-main #ps-page-title div.inner span {
 	color: #DEDEDE;
 }
+#ps-search-clear {
+	padding-bottom: 2px;
+}
 
 #ps-page-title div.ps-team-profile {
 	padding: 5px;
